--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,136 @@
+// Using Eric meyers style reset to remove default browser styling
+// for a uniform cross-browser experience
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+
+
+
+// My styles starts here
 body{
-  background-color: red;
+  background: linear-gradient(to right, #1e130c,#9a8478);
+    // background: repeating-linear-gradient(-45deg, #abbaab, #abbaab 100px, #ccc 100px, #ccc 30px);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  display: grid;
+  grid-template-columns: 70px 1fr;
+  grid-template-rows: auto auto auto auto auto 100px;
+}
+
+// Centering and sizing all heading elements
+h1{
+  text-align: center;
+  font-size: 35px;
+}
+
+// Giving padding and background images
+.mainHeading{
+  p{
+    padding: 20px;
+    font-size: 20px;
+  }
+}
+
+
+// Styling for navbar goes here
+.navBar{
+  grid-row:1/7; //Always update to end at the last row
+  ul{
+    height: 200px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 50px 50px 50px 50px;
+    li{
+
+      a{
+        text-decoration: none;
+        color: white;
+        text-align: center;
+
+padding: 12px 0;
+  padding-top: 12px;
+        border: 1px solid black;
+      }
+    }
+  }
+}
+
+
+
+
+
+
+.activityLinks{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+  img{
+    max-width: 100%;
+     height: auto;
+     border-radius: 12px;
+  }
+  a{
+    text-decoration: none;
+    padding: 10px;
+    figure{
+      figcaption{
+        text-align: center;
+        color: white;
+      }
+    }
+  }
+}
+
+
+
+footer{
+  color: white;
+  background-color: black;
+  grid-column: 2/3;
 }
