--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
+v2.0 | 20110126
+License: none (public domain)
 */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -46,40 +46,81 @@ table {
   border-spacing: 0; }
 
 body {
-  background: linear-gradient(to right, #1e130c, #9a8478);
+  color: black;
+  background-color: violet;
   background-repeat: no-repeat;
   background-attachment: fixed;
   display: grid;
-  grid-template-columns: 70px 1fr;
-  grid-template-rows: auto auto auto auto auto 100px; }
+  grid-template-columns: 100px 1fr;
+  grid-template-rows: auto auto auto auto auto 30px;
+  grid-gap: 20px;
+  animation-name: backgroundTransition;
+  animation-duration: 20s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in; }
 
+@keyframes backgroundTransition {
+  0% {
+    background-color: violet; }
+  25% {
+    background-color: indigo; }
+  50% {
+    background-color: blue; }
+  75% {
+    background-color: green; }
+  100% {
+    background-color: yellow; } }
 h1 {
   text-align: center;
   font-size: 35px; }
 
 .mainHeading p {
-  padding: 20px;
+  padding: 30px;
   font-size: 20px; }
 
+@keyframes slideshow {
+  background: url(""); }
 .navBar {
   grid-row: 1/7; }
   .navBar ul {
-    height: 200px;
+    height: 400px;
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 50px 50px 50px 50px; }
-    .navBar ul li a {
-      text-decoration: none;
-      color: white;
-      text-align: center;
-      padding: 12px 0;
-      padding-top: 12px;
-      border: 1px solid black; }
+    grid-template-columns: 100px;
+    grid-template-rows: auto auto auto auto;
+    position: sticky;
+    top: 0;
+    overflow: hidden;
+    z-index: 10; }
+    .navBar ul li {
+      margin: 0 auto; }
+      .navBar ul li a {
+        text-decoration: none;
+        color: white;
+        text-align: center;
+        padding: 10px 20px;
+        background-color: #000;
+        border: 1px solid black;
+        width: 100px; }
+
+.btn-secondary {
+  border: none;
+  padding: 10px 10px;
+  background-color: #000;
+  color: #fff;
+  margin-top: 10px;
+  border-radius: 0; }
+
+dropdown-menu a {
+  text-align: left;
+  padding: 0;
+  margin: 0;
+  width: 100px; }
 
 .activityLinks {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-gap: 20px; }
+  grid-gap: 20px;
+  padding: 20px; }
   .activityLinks img {
     max-width: 100%;
     height: auto;
@@ -91,9 +132,35 @@ h1 {
       text-align: center;
       color: white; }
 
+.subsection {
+  display: grid;
+  grid-template-columns: 500px 500px;
+  grid-template-rows: 1fr 1fr; }
+
+.subsection figure img {
+  width: 80%; }
+
+.subsection figure figcaption {
+  padding: 20px 100px 20px 0px; }
+
 footer {
   color: white;
   background-color: black;
-  grid-column: 2/3; }
+  grid-row: 6/7;
+  grid-column: 2/3;
+  text-align: center;
+  padding: 5px;
+  position: sticky;
+  bottom: 0;
+  border-radius: 10px 10px 0 0; }
+
+@media screen and (min-width: 1600px) {
+  body {
+    margin-left: 20%;
+    margin-right: 20%; } }
+@media screen and (min-width: 980px) {
+  body {
+    margin-left: 10%;
+    margin-right: 10%; } }
 
 /*# sourceMappingURL=style.css.map */
