--- a/css/style.scss
+++ b/css/style.scss
@@ -51,7 +51,7 @@ table {
 
 
 
-
+@import url('https://fonts.googleapis.com/css?family=Raleway');
 // My styles starts here
 body{
   color: black;
@@ -61,13 +61,15 @@ body{
   background-repeat: no-repeat;
   background-attachment: fixed;
   display: grid;
-  grid-template-columns: 100px 1fr;
+  grid-template-columns: 120px 1fr;
   grid-template-rows: auto auto auto auto auto 30px;
   grid-gap: 20px;
   animation-name: backgroundTransition;
   animation-duration: 20s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in;
+    font-size: 50px;
+    font-family: 'Raleway', sans-serif;
 }
 
 @keyframes backgroundTransition{
@@ -81,14 +83,14 @@ body{
 // Centering and sizing all heading elements
 h1{
   text-align: center;
-  font-size: 35px;
+  font-size: 50px;
 }
 
 // Giving padding and background images
 .mainHeading{
   p{
     padding: 30px;
-    font-size: 20px;
+    font-size: 40px;
   }
 }
 
@@ -114,10 +116,11 @@ h1{
     li{
       margin: 0 auto;
       a{
+        font-size: 20px;
         text-decoration: none;
         color: white;
         text-align: center;
-        padding: 10px 20px;
+        padding: 10px 30px;
         background-color: #000;
         border: 1px solid black;
         width: 100px;
@@ -132,14 +135,15 @@ h1{
   padding:10px 10px;
   background-color: #000;
   color: #fff;
-  margin-top:10px;
+  margin-top:15px;
   border-radius:0;
+  font-size: 20px;
 }
 dropdown-menu a{
+  padding:10px 10px;
   text-align: left;
-  padding: 0;
   margin: 0;
-  width: 100px;
+  width: 130px;
 }
 
 
@@ -161,6 +165,7 @@ dropdown-menu a{
       figcaption{
         text-align: center;
         color: white;
+        font-size: 30px;
       }
     }
   }
@@ -178,6 +183,7 @@ dropdown-menu a{
 }
 .subsection figure figcaption{
   padding: 20px 100px 20px 0px;
+  font-size: 30px;
 }
 footer{
   color: white;
@@ -185,10 +191,11 @@ footer{
   grid-row: 6/7;
   grid-column: 2/3;
   text-align: center;
-  padding: 5px;
+  padding: 10px;
   position: sticky;
   bottom: 0;
   border-radius: 10px 10px 0 0;
+  font-size: 20px;
 }
 
 // Responsive for desktop
