--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,51 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/*
-    Created on : May 15, 2018, 8:41:37 PM
-    Author     : FUJITSU
-*/
 @import url("https://fonts.googleapis.com/css?family=Raleway");
 /* http://meyerweb.com/eric/tools/css/reset/
-v2.0 | 20110126
-License: none (public domain)
+   v2.0 | 20110126
+   License: none (public domain)
 */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block; }
+
+body {
+  line-height: 1; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
 /*Styles for entire body*/
 body {
   background-color: #ccc;
@@ -19,9 +53,11 @@ body {
   margin: 0 auto;
   font-family: 'Raleway', sans-serif; }
 
-/*Centering and sizing header*/
+/*Centering and sizing the largest heading elements*/
 h1 {
-  text-align: center; }
+  font-size: 3em;
+  text-align: center;
+  text-shadow: 2px 2px grey; }
 
 .mainArticle p {
   font-size: 1.2em;
@@ -29,7 +65,7 @@ h1 {
   border-top: 1px solid black;
   border-bottom: 1px solid black;
   color: white;
-  background: url("../images/Koala.jpg");
+  background: url("../images/camping2.jpg");
   background-size: cover;
   animation-name: slideShow;
   animation-duration: 30s;
@@ -39,7 +75,7 @@ h1 {
 
 @keyframes slideShow {
   0% {
-    background: url("../images/camping1.jpg");
+    background: url("../images/camping2.jpg");
     background-size: cover;
     color: white; }
   10% {
@@ -57,47 +93,96 @@ h1 {
     background: url("../images/hiking3.jpg");
     background-size: cover; }
   50% {
-    background: url("../images/Lighthouse.jpg");
+    background: url("../images/fishing1.jpg");
     background-size: cover;
     color: black; }
   60% {
-    background: url("../images/Penguins.jpg");
+    background: url("../images/hiking5.jpg");
     background-size: cover; }
   70% {
-    background: url("../images/Tulips.jpg");
+    background: url("../images/fishing2.jpg");
     background-size: cover; } }
 /*Main container starts here*/
 .mainContainer {
   display: grid;
-  grid-template-columns: auto auto; }
+  grid-template-columns: 120px auto; }
+
+.dropdown .dropbtn {
+  cursor: pointer;
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: #000;
+  font-family: inherit;
+  border-radius: 0px 20px 20px 0px; }
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 20;
+  margin-bottom: 30px; }
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    text-align: left;
+    float: left; }
+
+.show {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  z-index: 40; }
 
 /*Styles for navbar starts here*/
+.navbar {
+  grid-column: 1/8; }
+
 .navBar ul {
   /*    border:1px solid black;*/
+  position: sticky;
+  top: 0;
+  overflow: hidden;
+  z-index: 10;
   padding: 0;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto auto;
   list-style-type: none;
-  position: sticky;
-  top: 0;
-  overflow: hidden;
-  z-index: 10;
   height: 300px; }
+  .navBar ul li a {
+    padding: 10px;
+    text-decoration: none;
+    background-color: black;
+    color: white;
+    border-radius: 0 20px 20px 0px; }
 
-.navBar ul li a {
-  padding: 10px;
-  text-decoration: none;
-  background-color: black;
-  color: white;
-  border-radius: 0 20px 20px 0px; }
-
-.campingSection {
+.campingSection, .hikingSection, .fishingSection, .climbingSection {
   grid-column: 2/3;
   width: 100%; }
 
 figure img {
+  border-radius: 12px;
   width: 100%; }
+figure img:hover {
+  filter: brightness(80%); }
+
+.campingSection p, .fishingSection p {
+  margin: 12px; }
+
+footer {
+  width: 100%; }
+  footer p {
+    background-color: #000;
+    padding: 10px;
+    color: white;
+    border-radius: 12px; }
 
 /*Responsive for large phones and small tablets*/
 @media screen and (min-width: 420) {
@@ -115,11 +200,18 @@ figure img {
     margin-left: 10%;
     margin-right: 10%; }
 
+  .show {
+    display: inline; }
+
   .navBar {
     position: sticky;
     top: 0;
     overflow: hidden;
-    z-index: 10; }
+    z-index: 10;
+    border-radius: 12px; }
+
+  .dropdown .dropbtn {
+    border-radius: 0px; }
 
   .navBar ul {
     /*    border:1px solid black;*/
@@ -141,18 +233,26 @@ figure img {
   .mainContainer {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 50px auto auto auto;
+    grid-template-rows: 50px auto auto auto auto auto auto auto;
     grid-gap: 10px; }
 
   .activityLinks {
+    position: sticky;
+    top: 0;
+    overflow: hidden;
+    z-index: 10;
     grid-column: 4/5;
-    grid-row: 2/6; }
+    grid-row: 2/9; }
 
   .navBar {
     grid-column: 1/5; }
 
-  .campingSection {
+  .campingSection, .fishingSection, .hikingSection, .climbingSection {
     border: 1px solid black;
-    grid-column: 1/4; } }
+    grid-column: 1/4; }
+    .campingSection h1, .fishingSection h1, .hikingSection h1, .climbingSection h1 {
+      margin-top: 60px; }
+    .campingSection p, .fishingSection p, .hikingSection p, .climbingSection p {
+      padding: 20px; } }
 
 /*# sourceMappingURL=style.css.map */
