--- a/css/Contact.scss
+++ b/css/Contact.scss
@@ -1,4 +1,8 @@
 // Mobile first styling for contact page
+body{
+  // light grey bg
+  background-color: #ccc;
+}
 form{
   display: grid;
   grid-template-rows: repeat(6,50px);
@@ -13,8 +17,18 @@ form{
 }
 h1{
   text-align: center;
+  a{
+    text-decoration: none;
+  }
 }
-
+#home{
+  grid-column: 1/2;
+  float: left;
+}
+#gallery{
+  grid-column: 2/3;
+  float: right;
+}
 form input,select,textarea, button{
   border-radius: 12px;
   font-size: 20px;
@@ -41,6 +55,7 @@ grid-area:email;
   grid-area: comments;
 }
 #submit{
+  cursor: pointer;
   grid-area:button;
   background: linear-gradient(to right, #3333cc,#000066);
   color: white;
