--- a/css/style.scss
+++ b/css/style.scss
@@ -51,6 +51,7 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
 /*Styles for entire body*/
 body{
   background-color: #ccc; /*Light grey background color*/
@@ -77,7 +78,8 @@ h1{
   animation-iteration-count: infinite;
   filter:contrast(120%);
   animation-timing-function: linear;
-
+padding: 20px;
+margin: 20px 0;
 }
 @keyframes slideShow{
   0%{background: url("../images/camping2.jpg");background-size: cover;color:white}
@@ -146,7 +148,7 @@ h1{
   position: sticky;
   top:0;
   overflow: hidden;
-  z-index: 10;
+  z-index: 100;
   padding: 0;
   display: grid;
   grid-template-columns:1fr;
@@ -171,7 +173,7 @@ h1{
 figure{
   img{
     border-radius: 12px;
-    width: 100%;
+    width: 90%;
   }
   img:hover{
     filter: brightness(80%);
@@ -257,7 +259,7 @@ footer{
     grid-template-columns:auto auto auto auto auto;
     grid-template-rows:50px;
     list-style-type: none;
-
+z-index: 11;
     margin: 0;
     padding: 0;
   }
@@ -282,7 +284,6 @@ footer{
     position: sticky;
     top: 0;
     overflow: hidden;
-    z-index: 10;
     grid-column:4/5;
     grid-row:2/9;
   }
@@ -291,14 +292,26 @@ footer{
   }
 
   .campingSection,.fishingSection, .hikingSection, .climbingSection {
+		img{
+			margin: 30px;
+		}
     h1{
       margin-top: 60px;
     }
     p{
-      padding: 20px;
-
+			border: 1px solid black;
+      padding: 50px;
+font-size: 20px;
     }
-    border: 1px solid black;
+
     grid-column: 1/4;
   }
+}
+
+.subsection figure figcaption{
+	p{
+		border: 1px solid black;
+		padding: 50px;
+font-size: 20px;
+	}
 }
