--- a/css/Gallery.css
+++ b/css/Gallery.css
@@ -1,15 +1,35 @@
 body {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: auto auto auto auto; }
+  grid-template-rows: auto auto auto auto;
+  grid-gap: 20px; }
 
 h1 {
   grid-column: 1/6;
   text-align: center; }
+  h1 #home {
+    float: left;
+    grid-column: 1/2; }
+  h1 #contact {
+    float: right;
+    grid-column: 5/6; }
+  h1 button {
+    height: 40px;
+    font-size: 20px;
+    width: 90px;
+    border-radius: 12px;
+    color: #000;
+    border: 2px solid blue; }
+    h1 button a {
+      text-decoration: none; }
 
 figure {
   text-align: center;
-  border: 1px solid black; }
+  border: 1px solid black;
+  border-radius: 12px;
+  overflow: hidden;
+  width: 100%;
+  margin: 0 auto; }
 
 figure img {
   width: 100%; }
@@ -39,5 +59,15 @@ a img:hover {
     transform: rotate(315deg); }
   100% {
     transform: rotate(360deg); } }
+@media screen and (max-width: 400px) {
+  body {
+    display: grid;
+    grid-template-columns: repeat(1, auto);
+    grid-template-rows: repeat(20, auto); } }
+@media screen and (max-width: 1000px) {
+  body {
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    grid-template-rows: auto auto auto auto auto auto; } }
 
 /*# sourceMappingURL=Gallery.css.map */
