--- a/css/Gallery.scss
+++ b/css/Gallery.scss
@@ -2,15 +2,40 @@ body{
   display: grid;
   grid-template-columns: repeat(5,1fr);
   grid-template-rows:auto auto auto auto;
+  grid-gap: 20px;
 }
 h1{
   grid-column: 1/6;
   text-align: center;
+  #home{
+    float:left;
+    grid-column: 1/2;
+  }
+  #contact{
+    float:right;
+    grid-column: 5/6;
+  }
+  button{
+    height: 40px;
+    font-size: 20px;
+      width: 90px;
+      border-radius: 12px;
+      color: #000;
+      border:2px solid blue;
+    a{
+      text-decoration: none;
+
+    }
+  }
 }
 
 figure{
   text-align: center;
   border:1px solid black;
+  		border-radius: 12px;
+      overflow: hidden;
+      width: 100%;
+      margin: 0 auto;
 }
 figure img{
   width: 100%;
@@ -33,4 +58,24 @@ a img:hover{
          62.5%{transform:rotate(270deg);}
           75%{transform:rotate(315deg);}
            100%{transform:rotate(360deg);}
+}
+
+
+
+// Responsive for mobile
+@media screen and (max-width:400px){
+  body{
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows:repeat(20, auto);
+  }
+}
+
+// Responsive for tablets
+@media screen and (max-width:1000px){
+  body{
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    grid-template-rows:auto auto auto auto auto;
+  }
 }
