--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,6 @@ h1 {
   animation-duration: 30s;
   animation-iteration-count: infinite;
   filter: contrast(120%);
-  animation-timing-function: linear;
   padding: 20px;
   margin: 20px 0; }
 
@@ -183,8 +182,7 @@ footer {
   footer p {
     background-color: #000;
     padding: 10px;
-    color: white;
-    border-radius: 12px; }
+    color: white; }
 
 /*Responsive for large phones and small tablets*/
 @media screen and (min-width: 420) {
@@ -245,6 +243,12 @@ footer {
     overflow: hidden;
     grid-column: 4/5;
     grid-row: 2/9; }
+    .activityLinks a {
+      text-align: center;
+      text-decoration: none;
+      float: right;
+      color: black;
+      margin-bottom: 20px; }
 
   .navBar {
     grid-column: 1/5; }
