--- a/css/style.scss
+++ b/css/style.scss
@@ -64,7 +64,7 @@ h1{
   text-align: center;
   text-shadow: 2px 2px grey;
 }
-
+// Styling for main introductory text
 .mainArticle p{
   font-size: 1.2em;
   padding: 10px;
@@ -76,10 +76,9 @@ h1{
   animation-name: slideShow;
   animation-duration: 30s;
   animation-iteration-count: infinite;
-  filter:contrast(120%);
-  animation-timing-function: linear;
-padding: 20px;
-margin: 20px 0;
+  filter:contrast(120%); //Contast text with background for better legibility
+  padding: 20px;
+  margin: 20px 0;
 }
 @keyframes slideShow{
   0%{background: url("../images/camping2.jpg");background-size: cover;color:white}
@@ -194,7 +193,7 @@ footer{
     background-color: #000;
     padding: 10px;
     color: white;
-    border-radius: 12px;
+
   }
 }
 
@@ -280,7 +279,20 @@ z-index: 11;
     grid-gap:10px;
   }
   .activityLinks{
+		a{
+			text-align: center;
+			text-decoration: none;
+			float: right;
+			color: black;
+				margin-bottom: 20px;
+		}
+figure{
 
+	img{
+
+	}
+
+}
     position: sticky;
     top: 0;
     overflow: hidden;
@@ -292,8 +304,10 @@ z-index: 11;
   }
 
   .campingSection,.fishingSection, .hikingSection, .climbingSection {
+
 		img{
 			margin: 30px;
+
 		}
     h1{
       margin-top: 60px;
